--- a/style.css
+++ b/style.css
@@ -122,20 +122,46 @@ Please do not change anything here! write in a custom.css file if required!
  *//*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i|Raleway:400,700,900|Shadows+Into+Light');
+#pincode{
+	color:#7a7a7a;
+}
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
+.form-container .btn {
+  background-color: #363f4d;
+  color: white;
 
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
 
+.open-button {
+  background-color: #363f4d;
+  color: white;
+  padding:;
+  border: 1px solid grey;
+  border-radius: 10px;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: ;
+  right: 100px;
+  width: 170px;
+}
 
 #signup{
 color:#fff;}
 #login{
 color:#fff;}
 #themetoggle{
-   background-color: #555;
+  background-color: #363f4d;
   color: white;
   padding:;
   border: 1px solid grey;
+  border-radius:10px;
   cursor: pointer;
   opacity: 0.8;
   position: fixed;
@@ -754,7 +780,7 @@ input {
 	box-shadow: none;
 	padding-left: 10px;
 	font-size: 12px;
-	color: #7a7a7a;
+	color: #222;
 	width: 100%;
 	border-radius: 0 25px 25px 0;
 }
