--- a/style1.css
+++ b/style1.css
@@ -1,16 +1,40 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i|Raleway:400,700,900|Shadows+Into+Light');
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
+.btn {
+  background-color: #68b501;
+  color: white;
+
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+.open-button {
+  background-color: #68b501;
+  color: white;
+  padding:;
+  border: 1px solid grey;
+  border-radius: 200px;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: ;
+  right: 100px;
+  width: 170px;
+}
 
 #signup{
 color:#fff;}
 #login{
 color:#fff;}
 #themetoggle{
-   background-color: #555;
+  background-color: #68b501;
   color: white;
   padding:;
   border: 1px solid grey;
+  border-radius:100px;
   cursor: pointer;
   opacity: 0.8;
   position: fixed;
